AC_PREREQ(2.57)

AC_INIT([brotli], [0.4.0], [-])
AC_CONFIG_SRCDIR([dec/decode.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
LT_INIT
AM_INIT_AUTOMAKE()
AM_MAINTAINER_MODE
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CXX

AC_CONFIG_FILES([Makefile libbrotlienc.pc libbrotlidec.pc])
AC_OUTPUT
