AC_PREREQ(2.57)

m4_define([brotli_abi_info], [0:0:0])

AC_INIT([brotli], [brotli_abi_info], [https://groups.google.com/forum/#!forum/brotli])

AM_INIT_AUTOMAKE()
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
LT_INIT

AC_CONFIG_FILES([Makefile scripts/gnu/libbrotlicommon.pc scripts/gnu/libbrotlidec.pc scripts/gnu/libbrotlienc.pc])

AC_OUTPUT